--- a/SimonSays.html
+++ b/SimonSays.html
@@ -5,11 +5,45 @@
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simon Says</title>
 
 </head>
 
 <body>
+    <div class="form-container">
+        <div class="background-color"></div>
+        <h3 class="play">PLAY!</h3>
+        <div class="blocks-containers">
+
+            <div class="Square one"></div>
+
+
+
+            <div class="Square two"></div>
+
+
+
+            <div class="Square three"></div>
+
+
+
+            <div class="Square four"></div>
+        </div>
+
+
+
+        <div class="bottom stuff">
+            <h3>Score:</h3>
+            <h3>High score:</h3>
+        </div>
+
+
+
+
+
+    </div>
+    </div>
+
 
 </body>
 
